Try 1: fix align button home

--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -66,11 +66,10 @@
     a
         float left
         p,svg
-            float left
+            display inline-block
+            vertical-align middle
         p
-            margin rem(5px)
-            +above(cut)
-                margin rem(10px)
+            margin 0
         &:hover
             .icon-back
                 transform translateX(-10px)
